<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.devcalc</groupId>
    <artifactId>devcalc-api</artifactId>
    <version>1.0.0</version>
    <name>devcalc-api</name>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <javalin.version>6.3.0</javalin.version>
        <slf4j.version>2.0.16</slf4j.version>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>

        <maven.surefire.version>3.2.5</maven.surefire.version>
        <maven.wrapper.plugin.version>3.3.2</maven.wrapper.plugin.version>
        <maven.wrapper.version>3.9.9</maven.wrapper.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>${javalin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-wrapper-plugin</artifactId>
                <version>${maven.wrapper.plugin.version}</version>
                <configuration>
                    <mavenVersion>${maven.wrapper.version}</mavenVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
